k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: mern-ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend-deployment
    spec:
      containers:
      - name: frontend-container
        image: parthsingh2496/mern-frontend:latest
        ports:
        - containerPort: 80
