k8s/mongodb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: mern-ecommerce
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo:8.0
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-volume
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
