k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-ecommerce
spec:
  selector:
    app: backend-deployment
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
