k8s/fronted-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mern-ecommerce
spec:
  selector:
    app: frontend-deployment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
